<resources>
    <string name="app_name">保利养生谷</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="homepage">主页</string>
    <string name="vr_model">AR看房</string>
    <string name="price">房价助手</string>
    <string name="company">保利品牌</string>
    <string name="follow_us">关注我们</string>

    <string name="commercial">商业贷款</string>
    <string name="reserve_funds">公积金贷款</string>
    <string name="mixed">混合贷款</string>
    <string name="commercial_monad">商业贷款(单位万)</string>
    <string name="reserve_monad">公积金贷款(单位万)</string>

    <string name="am10">贷款总额</string>
    <string name="am11">还款月数</string>
    <string name="am12">月还款</string>
    <string name="am13">总支付利息</string>
    <string name="am14">本息总和</string>
    <string name="landscape"><![CDATA[ <font color=#ffffff>点击上方按钮后，请将手机</font><font color=#FF0000>横置录像</font>]]> </string>
    <string name="landscape2">请点击按钮后，将摄像头对准宣传资料</string>
    <string name="phone_number">电话联系：<u>0825-2281118</u></string>

    <string name="china_baoli">\t\t\t\t中国保利集团公司系国务院国有资产监督管理委员会管理的大型中央企业，于1992年经国务院、中央军委批准组建。\n\r
\t\t\t\t30多年来，保利集团已形成以国际贸易、房地产开发、文化艺术经营、资源领域投资开发、民用爆炸物品产销及相关服务为主业的“五业并举、多元发展”格局，业务遍布全球100多个国家及国内100余个城市。\n\r
\t\t\t\t在美国财富杂志发布的2015年世界500强排行榜上，保利集团以2014年度260.5亿美元营业收入排名第457位。\n\r
\t\t\t\t目前，保利集团共有多类企业600余家。员工6万余名。\n\r
</string>
    <string name="baoli_chengdu">\t\t\t\t保利（成都）实业有限公司是保利房地产（集团）股份有限公司控股的国有房地产企业，是保利房地产（集团）股份有限公司在四川的区域子公司，具备国家二级房地产开发资质。\n\r
\t\t\t\t公司于2007年8月成立，注册资本：人民币20000万元。经营范围涉及房地产开发、土地整理、城市基础设施建设、房产销售、房屋出租、房屋拆迁、房屋工程设计、道路与土方工程施工、室内装修、冷气工程及管道安装、物业管理、酒店管理、商品批发和零售。
公司将以"务实、创新、规范、卓越"的原则在成都市开发建设中高档住宅居住区，以规模化的精品产品进入成都市的商品住宅市场，立足成都，辐射四川省二级城市。
公司将秉承保利地产"和谐生活，自然舒适"的开发理念，专注于"和谐、自然、舒适"的产品特色营造，不断提升产品的质量。\n\r
\t\t\t\t公司将以经济建设为中心，以房地产为主业，积极提高核心竞争力和凝聚力，目前已拥有大批高素质专业人才，公司将继续打造地产精品，创造和谐生活，依法经营，规范管理，以行业旗舰的风采打造中国地产长城。\n\r
\t\t\t\t成都公司已经有保利公园198、保利石像湖国际乡村俱乐部、保利中心、保利锦湖林语、保利林语溪、保利叶语、保利新天地、保利心语花园、保利康桥、保利城、保利贝森公馆、保利春天花语、保利狮子湖等多个项目实施运作，公司正在按照既定的战略稳步发展，为成都市乃至全川消费者建造高素质的精品住宅。\n\r
</string>
    <string name="baoli_company">\t\t\t\t保利房地产（集团）股份有限公司是中国保利集团控股的大型国有房地产上市公司，国家一级房地产开发资质企业，连续五年荣膺中国房地产行业领导公司品牌。\n\r
\t\t\t\t2006年7月，公司股票在上海证券交易所上市，并入选"2008年度中国上市公司优秀管理团队"。\n\r
\t\t\t\t2013年荣获上市公司综合实力第二名，风险控制第一名。\n\r
\t\t\t\t2013年，保利物业获评中国物业管理行业top200第二名、百强企业首选服务品牌第二名。\n\r
\t\t\t\t2014年底，公司总资产突破3600亿元，实现签约金额1366.76亿元。\n\r
\t\t\t\t2015年实现签约金额1541.04亿元。\n\r
\t\t\t\t保利地产成立于1992年，经过十年扎实发展，2002年成功完成股份制改造，遂开始实施全国化战略，加强专业化运作，连续实现跨越式发展。\n\r
\t\t\t\t目前，公司已完成以广州、北京、上海为中心，覆盖57个城市的全国化战略布局，拥有292家控股子公司，业务拓展到房地产开发、建筑设计、工程施工、物业管理、销售代理以及商业会展、酒店经营等相关行业。\n\r
公司坚持以商品住宅开发为主，适度发展持有经营性物业。\n\r
\t\t\t\t在住宅开发方面，保利地产逐渐形成了康居Health、善居Quality、逸居Classical、尊居Glory四大产品系列，涵盖花园系、心语系、香槟系、公馆系、林语系、康桥系、十二橡树系等多元化优质住宅物业的先进创新格局，覆盖中高端住宅、公寓、别墅多种物业形态。
商业物业囊括商业写字楼、高端休闲地产、星级酒店、商贸会展、购物中心、城市综合体等，具备多品类物业综合开发的实力。\n\r
\t\t\t\t保利地产奉行“和者筑善”的品牌理念，将“和谐”提升至企业品牌战略的高度，致力于创造自然、建筑、人文交融的和谐人居生活。将“和谐”理念始终贯彻于企业的规划设计、开发建设和客户服务全过程，研创节能环保、自然舒适的产品，提升产品品质，通过亲情和院式服务营造良好的社区氛围，赢得了消费者的广泛喜爱。
从“圆明园国宝展”到每年举办的“和乐中国”系列活动，保利地产植根文化地产，收到了较好的社会效益和示范效应。\n\r
\t\t\t\t保利地产成立二十二年，循法尚德、诚信经营，奉行务实、创新、规范、卓越的经营理念，秉承奋发向上、团结协作、乐于奉献、规范诚信、纪律严明的企业精神和价值观念，在激烈的行业竞争中取得了长足的发展，奠定了行业领军地位。未来，保利地产将凭借准确的战略规划、优秀的管理能力、专业的市场运作和不断深化的品牌影响力，不断发展，继续为实现“打造中国地产长城”的企业愿景而不懈努力。\n\r
</string>

    <string name="text_top">养情•养心•养性•养境\n\r
保利养生谷期待您的来临\n\r
PolyNaturalValley\n\r
千亩谷境，润养三生\n\r
保利征途\n\r
从2008年保利进入西南起\n\r
十年的征途\n\r
保利积极参与建设城市\n\r

5大产品系列已开发39个项目\n\r
举办超5000场大型文化活动\n\r
保利国际风筝节、草莓音乐节等\n\r
全川1400余万人受到影响并参与其中\n\r
\n\r
肩负着拔升遂宁高端人居格局的使命\n\r
2013年，保利打造遂宁首席江湾华宅\n\r
2016年，保利用3年雕琢第八代城市江湾墅\n\r
2017年，保利肩承3大重任只为缔造全新遂宁\n\r
        \n\r
        \n\r
保利养生谷\n\r
按照4A级标准打造的花卉主题公园\n\r
\n\r
约2800亩的生态新城中有2300余亩将为花海\n\r
原生的山色湖境，浩瀚的世外花景\n\r
遂宁绝佳的自然生态和厚重的人文底蕴\n\r
浓缩在养生谷的千亩花海之中\n\r
\n\r
感受自然的乐章，谱写生活的诗意\n\r
幽居于山水天地之间\n\r
生活在繁华和山色之中\n\r
谨以此境，润养三生\n\r
</string>
    <string name="text_medium"><![CDATA[ \t\t\t\t结合遂宁的文化底蕴和自然资源，保利力求打造自然与人居的典范之作。整个养生谷的住宅区和公共区构筑了一处拥有三境九景的生态城。<br>
<b>一重境：凯旋峰境</b><br>
\t\t\t\t天然的流水串联了整处美景。花园洋房临水而置，林中别墅若隐若现，盈客台、保利桥、千玺云门营造了独特的入户仪式感：岁月静好，花香常伴。<br>
<b>二重境：风雅藏境</b><br>
\t\t\t\t百花姹紫嫣红，山岭绿水葱郁，五彩香径、尊爵荟、望山汀屿营造梦幻雅致休闲区域，让生活的交流和家之间的距离更近。<br>
<b>三重境：悦然秘境</b><br>
\t\t\t\t童梦缘、斑斓小镇、果岭山水影交错，幻想联结的童话乐园、让时光悠闲的游乐设施点缀在花丛中，成就了不一样的秘境。<br>
]]> </string>

    <string name="text_bottom"><![CDATA[ \t\t\t\t以南北纵向贯穿的自然流水为主要轴线，保利打造了一条美丽梦幻的流水景观轴。在蜿蜒的流水两旁，三个不同的区域将山、水、城融为一体，让社区成为一个有机整体。
<b>西南临水洋房区</b><br>
\t\t\t\t沿流水景观轴，洋房临水而置，环绕于葱郁山丘之中，背山临水，赏心悦目。
<b>中部台地别墅区</b><br>
\t\t\t\t环山围绕的小平原设置环坡而上的台地别墅区， 清幽雅致。别墅住宅区南面拾坡而上自成风景。
<b>东北风情商业街</b><br>
\t\t\t\t沿伸于流水景观轴，巧致玲珑的风情商业区曲折回廊，环绕流水。完善的社区商业配套带来不一样的精致休闲时光。
  ]]> </string>
    <string name="text_bottom2">保利养生谷\n\r
打造了新的城市风景\n\r
带来了全新的人居理念\n\r
\n\r
养情•养心•养性•养境\n\r
保利养生谷期待您的来临\n\r

遂宁市内接待中心\n\r
（原江语城售楼部）\n\r
\n\r
保利养生谷项目展示中心\n\r
（四川职业学院后500米）\n\r
\n\r
中国•遂宁•养生谷 0825-228 1118\n\r
\n\r
精工保利\n\r
\n\r
保利地产是国资委控股的大型央企\n\r
从成立至今已有25年的光辉历史\n\r
目前更以广州、北京、上海、成都为中心\n\r
拥有覆盖约60余座城市的全国化战略布局\n\r
</string>
</resources>
