<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_local"
            android:icon="@drawable/ic_about"
            android:checked="true"
            android:title="@string/app_name"/>
        <item
            android:id="@+id/item_home"
            android:icon="@drawable/ic_vr"
            android:title="@string/vr_model"/>
        <item
            android:id="@+id/item_price"
            android:icon="@drawable/ic_statistics"
            android:title="@string/price"/>

        <item
            android:id="@+id/item_company"
            android:icon="@drawable/ic_list"
            android:title="@string/company"/>
        <item
            android:id="@+id/item_follow"
            android:icon="@drawable/ic_gank"
            android:title="@string/follow_us"/>
    </group>
</menu>
