<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/commercialTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/commercialEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reserve_monad"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="贷款年限"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/yearSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/yearEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:text="20"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rateTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/rateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="年利率"
                android:inputType="number"
                android:text="4.50"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="提交"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/reset"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="重置"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold"/>
        </LinearLayout>


        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TableLayout
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="输出结果："
                    android:textSize="12sp"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="#A0A0A0">
                </View>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="等额本息"
                        android:textSize="12sp"/>

                    <TextView
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="等额本金"
                        android:textSize="12sp"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray">

                    <TextView
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am10"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/am10"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/am20"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="12sp"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray">

                    <TextView
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am11"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/am11"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/am21"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="12sp"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray">

                    <TextView
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am12"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/am12"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/red"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/am22"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/red"
                        android:textSize="12sp"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray">

                    <TextView
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am13"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/am13"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/red"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/am23"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/red"
                        android:textSize="12sp"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray">

                    <TextView
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am14"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/am14"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/red"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/am24"
                        style="@style/textview_allgrade_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/red"
                        android:textSize="12sp"/>
                </TableRow>
            </TableLayout>
        </TableRow>
    </LinearLayout>
</ScrollView>